--- a/shop.html
+++ b/shop.html
@@ -224,7 +224,7 @@
                 <img src="img/pay/pay.png" alt="">
             </div>
             <div class="copyright">
-                <p>The content of this site is copyright-protected and is the property of  Your Attire.</p>
+                <p>The content of this site is copyright-protected  of  GREEN GROCERS.</p>
             </div>
         </footer>
 
