--- a/shop.html
+++ b/shop.html
@@ -186,9 +186,9 @@
             <div class="col">
                 <img class="logo" src="img/logo.png" alt="brand-logo">
                 <h4>Contact</h4>
-                <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco.</p>
-                <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
-                <p><strong>Phone:</strong> +91 9578542648 / +91 9774574855</p>
+                <p><strong>Address:</strong> KG1-295, Shaheed Rajguru Marg, Block KG 1, KG-III New Delhi.</p>
+                <p><strong>Hours:</strong> 10:00 - 18:00, Mon - fri</p>
+                <p><strong>Phone:</strong> +91 9865542648 / +91 8574574855</p>
                 <div class="follow">
                     <h4>Follow us</h4>
                     <div class="icon">
@@ -224,7 +224,7 @@
                 <img src="img/pay/pay.png" alt="">
             </div>
             <div class="copyright">
-                <p>The content of this site is copyright-protected  of  GREEN GROCERS.</p>
+                <p>The content of this site is copyright-protected and is the property of  Your Attire.</p>
             </div>
         </footer>
 
