--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#product1">Popular Products</a></li>
+                    <li><a href="#banner">New Arrivals</a></li>
+                    <li><a href="#footer">Contact</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
@@ -237,7 +238,7 @@
             </div>
         </section>-->
         <!--footer-->
-        <footer class="section-p1">
+        <footer id= "footer" class="section-p1">
             <div class="col">
                 <img class="logo" src="img/logo.png" alt="brand-logo">
                 <h4>Contact</h4>
