--- a/shop.html
+++ b/shop.html
@@ -20,8 +20,8 @@
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="shop.html">Shop</a></li>
-                    <li><a href="index.html#product1">Popular Products</a></li>
-                    <li><a href="index.html#banner">New Arrivals</a></li>
+                    <li><a href="#popular">Popular Products</a></li>
+                    <li><a href="#banner">New Arrivals</a></li>
                     <li><a href="#footer">Contact</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
@@ -159,6 +159,142 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <h4>upto 70% off</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+        </section>
+        <!--Products-->
+        <section id="product1" class="section-p1">
+            <h2 id="popular">Popular Product- FRESH!</h2>
+            <p>Suggested for you!</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/products/a1.jpg" alt="">
+                    <div class="des">
+                        <span>Aashirvaad </span>
+                        <h5>Flour - Shudh Chakki Atta</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 448</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/a2.jpg" alt="">
+                    <div class="des">
+                        <span>Sundrop</span>
+                        <h5>Peanut Butter - Crunchy</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 270</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/a3.jpg" alt="">
+                    <div class="des">
+                        <span>Unbranded</span>
+                        <h5>Kiwi - Dried</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 149</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/a4.jpg" alt="">
+                    <div class="des">
+                        <span>Tata Salt</span>
+                        <h5>Iodized Salt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 27</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+        </section>
+
+         <!--new arrivals-->
+         <section id="product1" class="section-p1">
+            <h2>New Arrivals</h2>
+            <p>Grab the deal</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/products/n1.jpg" alt="">
+                    <div class="des">
+                        <span>Frugivore</span>
+                        <h5>Cherry Tomatoes Hydroponic</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 103</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n2.jpg" alt="">
+                    <div class="des">
+                        <span>Frugivore</span>
+                        <h5>Farm Fresh Brown Eggs</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 99</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n4.jpg" alt="">
+                    <div class="des">
+                        <span>Frugivore</span>
+                        <h5>Ground Coffee - Dark</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 479</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n3.jpg" alt="">
+                    <div class="des">
+                        <span>Frugivore</span>
+                        <h5>Paneer</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs 105</h4>
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
