--- a/shop.html
+++ b/shop.html
@@ -231,7 +231,11 @@
                 </div>
             </div>
         </section>
-
+  <!--banner-->
+  <section id="banner" class="section-m1">
+    <h2>Upto <span>50% Off</span></h2>
+    <button class="normal">Explore More</button>
+</section>
          <!--new arrivals-->
          <section id="product1" class="section-p1">
             <h2>New Arrivals</h2>
