--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,6 @@
                     <li><a href="#popular">Popular Products</a></li>
                     <li><a href="#banner">New Arrivals</a></li>
                     <li><a href="#footer">Contact</a></li>
-                    <li><a href="cart.html"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
             </div>
@@ -40,7 +39,7 @@
         <!--Products-->
         <section id="product1" class="section-p1">
             <div class="pro-container">
-                <div class="pro" onclick="window.location.href='sproduct.html';">
+                <div class="pro" onclick="window.location.href='shop.html';">
                     <img src="img/products/s1.png" alt="">
                     <div class="des">
                         <span>green grocers</span>
